--- a/CHAPTER_5_MACHINE_LEARNING_MODELS.ipynb
+++ b/CHAPTER_5_MACHINE_LEARNING_MODELS.ipynb
@@ -720,7 +720,7 @@
    ],
    "source": [
     "# Extra Tree\n",
-    "from sklearn.ensemble import ExtraTreesClassifier, ExtraTreesRegression\n",
+    "from sklearn.ensemble import ExtraTreesClassifier, ExtraTreesRegressor\n",
     "model_class = ExtraTreesClassifier(n_estimators=1_000, max_depth=None, min_samples_split=2, random_state=56)\n",
     "model_output_overview(model_class)"
    ]
